// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/components ActionMenu 1`] = `
<div
  className="jsx-761699691 actionMenu"
>
  <div
    className="jsx-761699691 progress"
  >
    <div
      className="ui progress"
      data-percent={NaN}
    >
      <div
        className="bar"
        style={
          Object {
            "width": "NaN%",
          }
        }
      >
        <div
          className="progress"
        >
          undefined/undefined
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-761699691 actions"
  >
    <button
      className="ui fluid primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <span>
        Skip
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots common/components Button (active) 1`] = `
<div
  className="jsx-3614910306 klicker-button"
>
  <button
    className="ui active fluid button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Hello World!
  </button>
</div>
`;

exports[`Storyshots common/components Button 1`] = `
<div
  className="jsx-3614910306 klicker-button"
>
  <button
    className="ui fluid button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Hello World!
  </button>
</div>
`;

exports[`Storyshots common/components Collapser (extended) 1`] = `
<div
  className="jsx-884473926 collapser"
>
  <div
    className="jsx-884473926 content"
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="jsx-884473926 collapse"
  >
    <i
      aria-hidden="true"
      className="angle double up icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots common/components Collapser 1`] = `
<div
  className="jsx-884473926 collapser"
>
  <div
    className="jsx-884473926 content collapsed"
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="jsx-884473926 collapse"
  >
    <i
      aria-hidden="true"
      className="angle double down icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots common/components ListWithHeader 1`] = `
<div
  className="jsx-1758995555 listWithHeader"
>
  <span
    className="jsx-1758995555 listHeader"
  >
    hello world
  </span>
  <div
    className="ui list"
    role="list"
  >
    <div
      className="item"
      data-value={undefined}
      onClick={[Function]}
      role="listitem"
    >
      abcd
    </div>
    <div
      className="item"
      data-value={undefined}
      onClick={[Function]}
      role="listitem"
    >
      cdef
    </div>
  </div>
</div>
`;

exports[`Storyshots common/navbar AccountArea 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  aria-multiselectable={undefined}
  className="ui item simple dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  >
    AW 
  </div>
  <i
    aria-hidden="true"
    className="user icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
  >
    <div
      aria-checked={undefined}
      aria-disabled={undefined}
      aria-selected={undefined}
      className="item"
      onClick={[Function]}
      role="option"
    >
      <span>
        Logout
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/navbar SearchArea 1`] = `
<div
  className="jsx-2877258603 searchArea"
>
  <div
    className="ui fluid icon input"
  >
    <input
      className="jsx-2877258603"
      disabled={undefined}
      onChange={[Function]}
      placeholder="Search..."
      tabIndex={undefined}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots common/navbar SessionArea 1`] = `
Array [
  <div
    button={true}
    className="item"
    onClick={[Function]}
  >
    <a
      className="ui icon left labeled button"
      disabled={undefined}
      href="/sessions/running"
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="play icon"
      />
      <span>
        Running Session
      </span>
    </a>
  </div>,
  <a
    className="item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      aria-hidden="true"
      className="info icon"
    />
    Updates
  </a>,
  <a
    className="item"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      aria-hidden="true"
      className="help icon"
    />
    Support
  </a>,
]
`;

exports[`Storyshots common/sidebar LanguageSwitcher 1`] = `
<div
  className="languageSwitcher"
>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    className="ui fluid search selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={undefined}
  >
    <input
      aria-autocomplete="list"
      autoComplete="off"
      className="search"
      onChange={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      aria-live="polite"
      className="text"
      role="alert"
    >
      English
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      aria-multiselectable={undefined}
      className="menu transition"
      role="listbox"
    >
      <div
        aria-checked={true}
        aria-disabled={undefined}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <i
          className="gb flag"
        />
        <span
          className="text"
        >
          English
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <i
          className="de flag"
        />
        <span
          className="text"
        >
          Deutsch
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/sidebar Sidebar (invisible) 1`] = `
<div
  className="jsx-2794523884 sidebar"
>
  <div
    className="pushable"
  >
    <div
      className="ui vertical labeled icon ui overlay left wide sidebar sidebarMenu menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Item 1
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Item 2
      </a>
      <div
        className="jsx-2794523884 extras"
      >
        <div
          className="jsx-2794523884 langSwitcher"
        >
          <div
            className="languageSwitcher"
          >
            <div
              aria-busy={undefined}
              aria-disabled={undefined}
              aria-expanded={false}
              className="ui fluid search selection dropdown"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="combobox"
              tabIndex={undefined}
            >
              <input
                aria-autocomplete="list"
                autoComplete="off"
                className="search"
                onChange={[Function]}
                style={
                  Object {
                    "width": undefined,
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                English
              </div>
              <i
                aria-hidden="true"
                className="dropdown icon"
                onClick={[Function]}
              />
              <div
                aria-multiselectable={undefined}
                className="menu transition"
                role="listbox"
              >
                <div
                  aria-checked={true}
                  aria-disabled={undefined}
                  aria-selected={true}
                  className="active selected item"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                >
                  <i
                    className="gb flag"
                  />
                  <span
                    className="text"
                  >
                    English
                  </span>
                </div>
                <div
                  aria-checked={false}
                  aria-disabled={undefined}
                  aria-selected={false}
                  className="item"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                >
                  <i
                    className="de flag"
                  />
                  <span
                    className="text"
                  >
                    Deutsch
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-2794523884 logo"
        >
          Klicker
          <span
            className="jsx-2794523884 high"
          >
            UZH
          </span>
        </div>
      </div>
    </div>
    <div
      className="pusher"
    >
      PAGE CONTENT
    </div>
  </div>
</div>
`;

exports[`Storyshots common/sidebar Sidebar (visible) 1`] = `
<div
  className="jsx-2794523884 sidebar"
>
  <div
    className="pushable"
  >
    <div
      className="ui vertical labeled icon ui overlay left wide visible sidebar sidebarMenu menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Item 1
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Item 2
      </a>
      <div
        className="jsx-2794523884 extras"
      >
        <div
          className="jsx-2794523884 langSwitcher"
        >
          <div
            className="languageSwitcher"
          >
            <div
              aria-busy={undefined}
              aria-disabled={undefined}
              aria-expanded={false}
              className="ui fluid search selection dropdown"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              role="combobox"
              tabIndex={undefined}
            >
              <input
                aria-autocomplete="list"
                autoComplete="off"
                className="search"
                onChange={[Function]}
                style={
                  Object {
                    "width": undefined,
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                className="text"
                role="alert"
              >
                English
              </div>
              <i
                aria-hidden="true"
                className="dropdown icon"
                onClick={[Function]}
              />
              <div
                aria-multiselectable={undefined}
                className="menu transition"
                role="listbox"
              >
                <div
                  aria-checked={true}
                  aria-disabled={undefined}
                  aria-selected={true}
                  className="active selected item"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                >
                  <i
                    className="gb flag"
                  />
                  <span
                    className="text"
                  >
                    English
                  </span>
                </div>
                <div
                  aria-checked={false}
                  aria-disabled={undefined}
                  aria-selected={false}
                  className="item"
                  onClick={[Function]}
                  role="option"
                  style={
                    Object {
                      "pointerEvents": "all",
                    }
                  }
                >
                  <i
                    className="de flag"
                  />
                  <span
                    className="text"
                  >
                    Deutsch
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-2794523884 logo"
        >
          Klicker
          <span
            className="jsx-2794523884 high"
          >
            UZH
          </span>
        </div>
      </div>
    </div>
    <div
      className="pusher"
    >
      PAGE CONTENT
    </div>
  </div>
</div>
`;

exports[`Storyshots common/sidebar SidebarItem 1`] = `
<a
  className="item"
  onClick={[Function]}
>
  ITEM CONTENT
</a>
`;

exports[`Storyshots confusion ConfusionBarometer 1`] = `
<div
  className="jsx-611542565 confusionBarometer"
>
  <h2
    className="jsx-611542565"
  >
    <span>
      Confusion-Barometer
    </span>
  </h2>
  <div
    className="ui toggle checkbox"
    onChange={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <input
      checked={false}
      className="hidden"
      id={undefined}
      name={undefined}
      onClick={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
      value={false}
    />
    <label
      htmlFor={undefined}
    >
      Activated
    </label>
  </div>
</div>
`;

exports[`Storyshots confusion ConfusionSlider 1`] = `
<div
  className="jsx-2608453951 confusionSlider"
>
  <div
    className="jsx-2608453951 title"
  >
    <h2>
      Speed
    </h2>
  </div>
  <div
    className="jsx-2608453951 slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={10}
      aria-valuemin={-10}
      aria-valuenow={10}
      className="rangeslider rangeslider-horizontal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="rangeslider__fill"
        style={
          Object {
            "width": "0px",
          }
        }
      />
      <div
        className="rangeslider__handle"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "left": "0px",
          }
        }
        tabIndex={0}
      >
        <div
          className="rangeslider__handle-label"
        >
          10
        </div>
      </div>
      <ul
        className="rangeslider__labels"
      >
        <li
          className="rangeslider__label-item"
          data-value="10"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          High
        </li>
        <li
          className="rangeslider__label-item"
          data-value="0"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          Okay
        </li>
        <li
          className="rangeslider__label-item"
          data-value="-10"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "left": "0px",
            }
          }
        >
          Low
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/charts TableChart (FREE) 1`] = `
<div
  className="jsx-3045658666 tableChart"
>
  <div>
    <table
      className="griddle-table"
      style={undefined}
    >
      <thead
        className="griddle-table-heading"
        style={undefined}
      >
        <tr>
          <th
            className="griddle-table-heading-cell"
            onClick={[Function]}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <span>
              Count
            </span>
          </th>
          <th
            className="griddle-table-heading-cell"
            onClick={[Function]}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <span>
              Value
            </span>
          </th>
          <th
            className="griddle-table-heading-cell solutionColumn"
            onClick={[Function]}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            <span>
              T/F
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        className="griddle-table-body"
        style={undefined}
      >
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            10
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            hello world
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            5
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            blablabla 
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            100
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            hehe
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            1
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            asdasd
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            10
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            hello worlds
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
        <tr
          className="griddle-row"
          onClick={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={undefined}
        >
          <td
            className="griddle-cell countColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "3rem",
              }
            }
          >
            5
          </td>
          <td
            className="griddle-cell"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            blaaaali 
          </td>
          <td
            className="griddle-cell solutionColumn"
            onClick={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={
              Object {
                "width": "1rem",
              }
            }
          >
            <span>
              F
            </span>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="griddle-pagination"
      style={undefined}
    >
      <select
        className="griddle-page-select"
        onChange={[Function]}
        style={undefined}
        value={1}
      >
        <option
          value={1}
        >
          1
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Chart 1`] = `
<div
  className="jsx-1161725731 chart"
>
  <div
    className="jsx-1161725731 noChart"
  >
    <button
      className="ui button showGraphButton"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <span>
        Show Graph
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots evaluation/components EvaluationListItem 1`] = `
<div>
  <div
    className="jsx-2739307800 evaluationListItem"
  >
    <div
      className="jsx-2739307800 colorSquare"
    >
      <i
        aria-hidden="true"
        className="square icon icon"
      />
    </div>
    <div
      className="jsx-2739307800 content"
    >
      hello world
    </div>
    <div
      className="jsx-2739307800 marker"
    >
      MIN
    </div>
  </div>
  <div
    className="jsx-965629237 evaluationListItem"
  >
    <div
      className="jsx-965629237 colorSquare"
    >
      <i
        aria-hidden="true"
        className="square icon icon"
      />
    </div>
    <div
      className="jsx-965629237 content"
    >
      hello world 2
    </div>
  </div>
  <div
    className="jsx-2316657291 evaluationListItem"
  >
    <div
      className="jsx-2316657291 content"
    >
      hello world 3
    </div>
    <div
      className="jsx-2316657291 marker"
    >
      MAX
    </div>
  </div>
  <div
    className="jsx-2316657291 evaluationListItem"
  >
    <div
      className="jsx-2316657291 content"
    >
      hello world 4
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Info 1`] = `
<div
  className="info"
>
  <span>
    Total participants:
  </span>
   
  0
</div>
`;

exports[`Storyshots evaluation/components Possibilities (FREE_RANGE) 1`] = `
<div
  className="jsx-3283260225 possibilities"
>
  <h2
    className="jsx-3283260225"
  >
    <span>
      Restrictions
    </span>
  </h2>
  <div
    className="jsx-3283260225"
  >
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MIN
      </div>
      <div
        className="jsx-2316657291 content"
      >
        10
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MAX
      </div>
      <div
        className="jsx-2316657291 content"
      >
        20
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Possibilities (MC) 1`] = `
<div
  className="jsx-3283260225 possibilities"
>
  <h2
    className="jsx-3283260225"
  >
    <span>
      Choices
    </span>
  </h2>
  <div
    className="jsx-3283260225"
  >
    <div
      className="jsx-3390939862 evaluationListItem"
    >
      <div
        className="jsx-3390939862 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-3390939862 content"
      >
        This is the first possible answer
      </div>
      <div
        className="jsx-3390939862 marker"
      >
        A
      </div>
    </div>
    <div
      className="jsx-2817575730 evaluationListItem"
    >
      <div
        className="jsx-2817575730 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-2817575730 content"
      >
        This is the second possible answer
      </div>
      <div
        className="jsx-2817575730 marker"
      >
        B
      </div>
    </div>
    <div
      className="jsx-2010051732 evaluationListItem"
    >
      <div
        className="jsx-2010051732 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-2010051732 content"
      >
        This is the third possible answer
      </div>
      <div
        className="jsx-2010051732 marker"
      >
        C
      </div>
    </div>
    <div
      className="jsx-3318881493 evaluationListItem"
    >
      <div
        className="jsx-3318881493 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-3318881493 content"
      >
        This is the fourth possible answer
      </div>
      <div
        className="jsx-3318881493 marker"
      >
        D
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Possibilities (SC) 1`] = `
<div
  className="jsx-3283260225 possibilities"
>
  <h2
    className="jsx-3283260225"
  >
    <span>
      Choices
    </span>
  </h2>
  <div
    className="jsx-3283260225"
  >
    <div
      className="jsx-3390939862 evaluationListItem"
    >
      <div
        className="jsx-3390939862 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-3390939862 content"
      >
        This is the first possible answer
      </div>
      <div
        className="jsx-3390939862 marker"
      >
        A
      </div>
    </div>
    <div
      className="jsx-2817575730 evaluationListItem"
    >
      <div
        className="jsx-2817575730 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-2817575730 content"
      >
        This is the second possible answer
      </div>
      <div
        className="jsx-2817575730 marker"
      >
        B
      </div>
    </div>
    <div
      className="jsx-2010051732 evaluationListItem"
    >
      <div
        className="jsx-2010051732 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-2010051732 content"
      >
        This is the third possible answer
      </div>
      <div
        className="jsx-2010051732 marker"
      >
        C
      </div>
    </div>
    <div
      className="jsx-3318881493 evaluationListItem"
    >
      <div
        className="jsx-3318881493 colorSquare"
      >
        <i
          aria-hidden="true"
          className="square icon icon"
        />
      </div>
      <div
        className="jsx-3318881493 content"
      >
        This is the fourth possible answer
      </div>
      <div
        className="jsx-3318881493 marker"
      >
        D
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Statistics 1`] = `
<div
  className="jsx-521492810 statistics"
>
  <h2
    className="jsx-521492810"
  >
    <span>
      Statistics
    </span>
  </h2>
  <div
    className="jsx-521492810"
  >
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MIN
      </div>
      <div
        className="jsx-2316657291 content"
      >
        10
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        Q1
      </div>
      <div
        className="jsx-2316657291 content"
      >
        -
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MEDIAN
      </div>
      <div
        className="jsx-2316657291 content"
      >
        23
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MEAN
      </div>
      <div
        className="jsx-2316657291 content"
      >
        34.35
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        Q3
      </div>
      <div
        className="jsx-2316657291 content"
      >
        -
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        MAX
      </div>
      <div
        className="jsx-2316657291 content"
      >
        100
      </div>
    </div>
    <div
      className="jsx-2316657291 evaluationListItem reverse"
    >
      <div
        className="jsx-2316657291 marker"
      >
        SD
      </div>
      <div
        className="jsx-2316657291 content"
      >
        -
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluation/components Visualization 1`] = `
<div
  className="visualizationType"
>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-multiselectable={undefined}
    className="ui selection upward dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-live="polite"
      className="default text"
      role="alert"
    >
      Visualization
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>
</div>
`;

exports[`Storyshots feedbacks Feedback 1`] = `
<div
  className="jsx-340218795 feedback"
>
  <div
    className="jsx-340218795 content"
  >
    hello world
  </div>
  <div
    className="jsx-340218795 delete"
  >
    <button
      className="ui basic fluid icon button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="trash outline icon"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel (isActive) 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label
        htmlFor={undefined}
      >
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label
        htmlFor={undefined}
      >
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 feedbacks"
  />
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel (isPublic) 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label
        htmlFor={undefined}
      >
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui checked toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label
        htmlFor={undefined}
      >
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 feedbacks"
  />
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label
        htmlFor={undefined}
      >
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui disabled toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id={undefined}
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value={false}
      />
      <label
        htmlFor={undefined}
      >
        Publish questions
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots forms/components LoginForm 1`] = `
<div
  className="jsx-1235538274 formWithLinks"
>
  <form
    action={undefined}
    className="ui error form"
    onSubmit={[Function]}
  >
    <div
      className="required field"
    >
      <label
        className="jsx-3360603769"
        forHtml="email"
      >
        Email
      </label>
      <div
        className="ui icon input"
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        renderInput={undefined}
      >
        <input
          autoFocus={true}
          disabled={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email"
          tabIndex={undefined}
          type="email"
          value=""
        />
        <i
          aria-hidden="true"
          className="mail icon"
        />
      </div>
    </div>
    <div
      className="required field"
    >
      <label
        className="jsx-3360603769"
        forHtml="password"
      >
        Password
      </label>
      <div
        className="ui icon input"
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        renderInput={undefined}
      >
        <input
          disabled={undefined}
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Password"
          tabIndex={undefined}
          type="password"
          value=""
        />
        <i
          aria-hidden="true"
          className="privacy icon"
        />
      </div>
    </div>
    <div
      className="jsx-1235538274 actionArea"
    >
      <button
        className="ui primary disabled button semanticButton"
        disabled={true}
        onClick={[Function]}
        role="button"
        tabIndex={-1}
        type="submit"
      >
        Submit
      </button>
      <div
        className="jsx-1235538274 links"
      >
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            <a
              className="jsx-1235538274"
              href="/user/requestPassword"
              onClick={[Function]}
            >
              Forgot password?
            </a>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots forms/components PasswordRequestForm 1`] = `
<div
  className="jsx-1235538274 formWithLinks"
>
  <form
    action={undefined}
    className="ui error form"
    onSubmit={[Function]}
  >
    <div
      className="required field"
    >
      <label
        className="jsx-3360603769"
        forHtml="email"
      >
        Email
      </label>
      <div
        className="ui icon input"
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        renderInput={undefined}
      >
        <input
          autoFocus={true}
          disabled={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email"
          tabIndex={undefined}
          type="email"
          value=""
        />
        <i
          aria-hidden="true"
          className="mail icon"
        />
      </div>
    </div>
    <div
      className="jsx-1235538274 actionArea"
    >
      <button
        className="ui primary button semanticButton"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
        type="submit"
      >
        Submit
      </button>
      <div
        className="jsx-1235538274 links"
      >
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            <a
              className="jsx-1235538274"
              href="/user/login"
              onClick={[Function]}
            >
              Back to login
            </a>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots forms/helpers FormWithLinks 1`] = `
<div
  className="jsx-1235538274 formWithLinks"
>
  <form
    action={undefined}
    className="ui error form"
    onSubmit={[Function]}
  >
    form fields
    <div
      className="jsx-1235538274 actionArea"
    >
      <button
        className="ui primary button semanticButton"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
        type="submit"
      >
        button
      </button>
      <div
        className="jsx-1235538274 links"
      >
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            <a
              className="jsx-1235538274"
              href="href1"
              onClick={[Function]}
            >
              link1
            </a>
          </div>
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            <a
              className="jsx-1235538274"
              href="href2"
              onClick={[Function]}
            >
              link2
            </a>
          </div>
          <div
            className="item"
            data-value={undefined}
            onClick={[Function]}
            role="listitem"
          >
            <a
              className="jsx-1235538274"
              href="href3"
              onClick={[Function]}
            >
              link3
            </a>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Answering Options (unrestricted) 1`] = `
<div
  className="jsx-3044738652 ui form freeAnswerOptions"
>
  <div
    className="jsx-3044738652 field"
  >
    <textarea
      className="jsx-3044738652"
      disabled={false}
      id="responseInput"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (Lower bound restriction) 1`] = `
<div
  className="jsx-589985539 preview"
>
  <div
    className="jsx-589985539 description"
  >
    World!
  </div>
  <div
    className="jsx-589985539"
  >
    <div
      className="jsx-589985539 freeText"
    >
      <div
        className="jsx-589985539 box"
      />
    </div>
  </div>
  <div
    className="jsx-589985539 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (Number-Range) 1`] = `
<div
  className="jsx-589985539 preview"
>
  <div
    className="jsx-589985539 description"
  >
    World!
  </div>
  <div
    className="jsx-589985539"
  >
    <div
      className="jsx-589985539 freeText"
    >
      <div
        className="jsx-589985539 box"
      />
    </div>
  </div>
  <div
    className="jsx-589985539 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (unrestricted) 1`] = `
<div
  className="jsx-589985539 preview"
>
  <div
    className="jsx-589985539 description"
  >
    World!
  </div>
  <div
    className="jsx-589985539"
  >
    <div
      className="jsx-589985539 freeText"
    >
      <div
        className="jsx-589985539 box"
      />
    </div>
  </div>
  <div
    className="jsx-589985539 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE_RANGE Answering Options (Number restriction) 1`] = `
<div
  className="jsx-3044738652 ui form freeAnswerOptions"
>
  <div
    className="jsx-3044738652 field"
  >
    <textarea
      className="jsx-3044738652"
      disabled={false}
      id="responseInput"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE_RANGE Answering Options (lower bound restriction) 1`] = `
<div
  className="jsx-3044738652 ui form freeAnswerOptions"
>
  <div
    className="jsx-3044738652 field"
  >
    <textarea
      className="jsx-3044738652"
      disabled={false}
      id="responseInput"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE_RANGE Answering Options (upper bound restriction) 1`] = `
<div
  className="jsx-3044738652 ui form freeAnswerOptions"
>
  <div
    className="jsx-3044738652 field"
  >
    <textarea
      className="jsx-3044738652"
      disabled={false}
      id="responseInput"
      onChange={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Answering Options 1`] = `
<div
  className="jsx-3302775466 options"
>
  <div
    className="jsx-3302775466 option"
  >
    <button
      className="ui fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      answer 1
    </button>
  </div>
  <div
    className="jsx-3302775466 option"
  >
    <button
      className="ui fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      antwort 2
    </button>
  </div>
  <div
    className="jsx-3302775466 option"
  >
    <button
      className="ui fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      option 3
    </button>
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Option (correct) 1`] = `
<div
  className="jsx-146815730 option correct"
>
  <button
    className="jsx-146815730 leftAction"
    disabled={false}
    onClick={undefined}
  >
    <i
      aria-hidden="true"
      className="trash icon"
    />
  </button>
  <button
    className="jsx-146815730 toggle correct"
    disabled={false}
    onClick={undefined}
  >
    <i
      aria-hidden="true"
      className="checkmark icon"
    />
  </button>
  <div
    className="jsx-146815730 name"
  >
    That's true!
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Option (incorrect) 1`] = `
<div
  className="jsx-146815730 option"
>
  <button
    className="jsx-146815730 leftAction"
    disabled={false}
    onClick={undefined}
  >
    <i
      aria-hidden="true"
      className="trash icon"
    />
  </button>
  <button
    className="jsx-146815730 toggle"
    disabled={false}
    onClick={undefined}
  >
    <i
      aria-hidden="true"
      className="remove icon"
    />
  </button>
  <div
    className="jsx-146815730 name"
  >
    So wrong!
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Placeholder 1`] = `
<div
  className="jsx-2067361354 jsx-146815730 option"
>
  <button
    className="jsx-2067361354 jsx-146815730 leftAction"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-hidden="true"
      className="plus icon"
    />
  </button>
  <button
    className="jsx-2067361354 jsx-146815730 toggle"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-hidden="true"
      className="remove icon"
    />
  </button>
  <input
    className="jsx-2067361354 jsx-146815730"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className="jsx-2067361354 jsx-146815730 rightAction"
    onClick={[Function]}
    type="button"
  >
    <i
      aria-hidden="true"
      className="save icon"
    />
  </button>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Preview 1`] = `
<div
  className="jsx-42818339 preview"
>
  <div
    className="jsx-42818339 description"
  >
    abcd
  </div>
  <div
    className="jsx-42818339 options"
  >
    <div
      className="jsx-3302775466 options"
    >
      <div
        className="jsx-3302775466 option"
      >
        <button
          className="ui fluid disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          answer 1
        </button>
      </div>
      <div
        className="jsx-3302775466 option"
      >
        <button
          className="ui fluid disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          antwort 2
        </button>
      </div>
      <div
        className="jsx-3302775466 option"
      >
        <button
          className="ui fluid disabled button"
          disabled={true}
          onClick={[Function]}
          role="button"
          tabIndex={-1}
        >
          option 3
        </button>
      </div>
    </div>
  </div>
  <div
    className="jsx-42818339 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questions Question (MC, >1 versions) 1`] = `
<div
  className="jsx-4274341965 question"
>
  <div
    className="jsx-4274341965 checker active"
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <label
        htmlFor="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
      />
    </div>
  </div>
  <div
    className="jsx-4274341965 wrapper"
  >
    <h2
      className="jsx-4274341965 title"
    >
       
      This is a long question
    </h2>
    <div
      className="jsx-4274341965 versionChooser"
    >
      <div
        aria-busy={undefined}
        aria-disabled={true}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui disabled dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          v1 - 08.02.2015 14:32
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              v1 - 08.02.2015 14:32
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 tags"
    >
      <div
        className="jsx-2945381066 questionTags"
      >
        <div
          className="jsx-2945381066 tag"
        >
          CAPM
        </div>
        <div
          className="jsx-2945381066 tag"
        >
          Risk
        </div>
        <div
          className="jsx-2945381066 type tag"
        >
          <span>
            MC
          </span>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 details"
    >
      <div
        className="jsx-1426317984 questionDetails"
      >
        <div
          className="jsx-1426317984 column description"
        >
          test 1
        </div>
        <div
          className="jsx-1426317984 column options"
        />
        <div
          className="jsx-1426317984 column lastUsed"
        >
          <div
            className="jsx-1758995555 listWithHeader"
          >
            <span
              className="jsx-1758995555 listHeader"
            >
              <i
                aria-hidden="true"
                className="history icon"
              />
              <span>
                Usage history
              </span>
            </span>
            <div
              className="ui list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2015-02-08 14:32:11
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2016-09-09 15:22:09
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-1426317984 column buttons"
        >
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              View
            </span>
          </button>
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions Question (MC, no tags) 1`] = `
<div
  className="jsx-4274341965 question"
>
  <div
    className="jsx-4274341965 checker active"
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <label
        htmlFor="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
      />
    </div>
  </div>
  <div
    className="jsx-4274341965 wrapper"
  >
    <h2
      className="jsx-4274341965 title"
    >
       
      This is a long question
    </h2>
    <div
      className="jsx-4274341965 versionChooser"
    >
      <div
        aria-busy={undefined}
        aria-disabled={true}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui disabled dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          v1 - 08.02.2015 14:32
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              v1 - 08.02.2015 14:32
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 tags"
    >
      <div
        className="jsx-2945381066 questionTags"
      >
        <div
          className="jsx-2945381066 type tag"
        >
          <span>
            MC
          </span>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 details"
    >
      <div
        className="jsx-1426317984 questionDetails"
      >
        <div
          className="jsx-1426317984 column description"
        >
          test 1
        </div>
        <div
          className="jsx-1426317984 column options"
        />
        <div
          className="jsx-1426317984 column lastUsed"
        >
          <div
            className="jsx-1758995555 listWithHeader"
          >
            <span
              className="jsx-1758995555 listHeader"
            >
              <i
                aria-hidden="true"
                className="history icon"
              />
              <span>
                Usage history
              </span>
            </span>
            <div
              className="ui list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2015-02-08 14:32:11
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2016-09-09 15:22:09
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-1426317984 column buttons"
        >
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              View
            </span>
          </button>
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions Question (SC, 1 version) 1`] = `
<div
  className="jsx-4274341965 question"
>
  <div
    className="jsx-4274341965 checker active"
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
        name={undefined}
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <label
        htmlFor="check-4c821db7-0940-4a24-b31a-7969104bbc9f"
      />
    </div>
  </div>
  <div
    className="jsx-4274341965 wrapper"
  >
    <h2
      className="jsx-4274341965 title"
    >
       
      This is a long question
    </h2>
    <div
      className="jsx-4274341965 versionChooser"
    >
      <div
        aria-busy={undefined}
        aria-disabled={true}
        aria-expanded={false}
        aria-multiselectable={undefined}
        className="ui disabled dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          v1 - 08.02.2015 14:32
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={true}
            aria-disabled={undefined}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              v1 - 08.02.2015 14:32
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 tags"
    >
      <div
        className="jsx-2945381066 questionTags"
      >
        <div
          className="jsx-2945381066 tag"
        >
          CAPM
        </div>
        <div
          className="jsx-2945381066 tag"
        >
          Risk
        </div>
        <div
          className="jsx-2945381066 type tag"
        >
          <span>
            SC
          </span>
        </div>
      </div>
    </div>
    <div
      className="jsx-4274341965 details"
    >
      <div
        className="jsx-1426317984 questionDetails"
      >
        <div
          className="jsx-1426317984 column description"
        >
          test 1
        </div>
        <div
          className="jsx-1426317984 column options"
        />
        <div
          className="jsx-1426317984 column lastUsed"
        >
          <div
            className="jsx-1758995555 listWithHeader"
          >
            <span
              className="jsx-1758995555 listHeader"
            >
              <i
                aria-hidden="true"
                className="history icon"
              />
              <span>
                Usage history
              </span>
            </span>
            <div
              className="ui list"
              role="list"
            >
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2015-02-08 14:32:11
              </div>
              <div
                className="item"
                data-value={undefined}
                onClick={[Function]}
                role="listitem"
              >
                2016-09-09 15:22:09
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-1426317984 column buttons"
        >
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              View
            </span>
          </button>
          <button
            className="ui fluid button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionBlock (empty) 1`] = `
<div
  className="jsx-936553283 questionBlock"
>
  <div
    className="jsx-936553283 timeLimit"
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="jsx-936553283 sessionStatus"
  />
  <div
    className="jsx-936553283 questions"
  />
</div>
`;

exports[`Storyshots questions QuestionBlock 1`] = `
<div
  className="jsx-936553283 questionBlock"
>
  <div
    className="jsx-936553283 timeLimit"
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="jsx-936553283 sessionStatus"
  />
  <div
    className="jsx-936553283 questions"
  >
    <div
      className="jsx-2787287577 questionSingle"
    >
      <div
        className="jsx-2787287577 type"
      >
        <span>
          SC
        </span>
      </div>
      <div
        className="jsx-2787287577 title"
      >
        This is a long question
         
        <span
          className="jsx-2787287577"
        >
          (v
          1
          )
        </span>
      </div>
    </div>
    <div
      className="jsx-2787287577 questionSingle"
    >
      <div
        className="jsx-2787287577 type"
      >
        <span>
          SC
        </span>
      </div>
      <div
        className="jsx-2787287577 title"
      >
        This is a long question
         
        <span
          className="jsx-2787287577"
        >
          (v
          1
          )
        </span>
      </div>
    </div>
    <div
      className="jsx-2787287577 questionSingle"
    >
      <div
        className="jsx-2787287577 type"
      >
        <span>
          SC
        </span>
      </div>
      <div
        className="jsx-2787287577 title"
      >
        This is a long question
         
        <span
          className="jsx-2787287577"
        >
          (v
          1
          )
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionDetails 1`] = `
<div
  className="jsx-1426317984 questionDetails"
>
  <div
    className="jsx-1426317984 column description"
  >
    hello world blabla
  </div>
  <div
    className="jsx-1426317984 column options"
  />
  <div
    className="jsx-1426317984 column lastUsed"
  >
    <div
      className="jsx-1758995555 listWithHeader"
    >
      <span
        className="jsx-1758995555 listHeader"
      >
        <i
          aria-hidden="true"
          className="history icon"
        />
        <span>
          Usage history
        </span>
      </span>
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          20.12.2017
        </div>
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          19.12.2017
        </div>
      </div>
      <div
        className="jsx-1758995555 more"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        ...
      </div>
    </div>
  </div>
  <div
    className="jsx-1426317984 column buttons"
  >
    <button
      className="ui fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <span>
        View
      </span>
    </button>
    <button
      className="ui fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <span>
        Edit
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots questions QuestionSingle 1`] = `
<div
  className="jsx-2787287577 questionSingle"
>
  <div
    className="jsx-2787287577 type"
  >
    <span>
      SC
    </span>
  </div>
  <div
    className="jsx-2787287577 title"
  >
    This is a long question
     
    <span
      className="jsx-2787287577"
    >
      (v
      1
      )
    </span>
  </div>
</div>
`;

exports[`Storyshots questions QuestionTags 1`] = `
<div
  className="jsx-2945381066 questionTags"
>
  <div
    className="jsx-2945381066 tag"
  >
    CAPM
  </div>
  <div
    className="jsx-2945381066 tag"
  >
    Risk
  </div>
  <div
    className="jsx-2945381066 type tag"
  >
    <span>
      SC
    </span>
  </div>
</div>
`;

exports[`Storyshots sessions QuestionDropzone 1`] = `
<div
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="jsx-3099967442 dropzone"
  >
    <i
      aria-hidden="true"
      className="plus icon"
    />
  </div>
</div>
`;

exports[`Storyshots sessions Session 1`] = `
<div
  className="jsx-1915206423 session"
>
  <h2
    className="jsx-1915206423 title"
  >
    Long session
  </h2>
  <div
    className="jsx-1915206423 date"
  >
    <span>
      Created on
    </span>
     
    08.02.15 14:32
  </div>
  <div
    className="jsx-1915206423 details"
  >
    <div
      className="jsx-1915206423 block"
    >
      <div
        className="jsx-936553283 questionBlock"
      >
        <div
          className="jsx-936553283 questions"
        >
          <div
            className="jsx-2787287577 questionSingle"
          >
            <div
              className="jsx-2787287577 type"
            >
              <span>
                SC
              </span>
            </div>
            <div
              className="jsx-2787287577 title"
            >
              This is a long question
               
              <span
                className="jsx-2787287577"
              >
                (v
                1
                )
              </span>
            </div>
          </div>
          <div
            className="jsx-2787287577 questionSingle"
          >
            <div
              className="jsx-2787287577 type"
            >
              <span>
                SC
              </span>
            </div>
            <div
              className="jsx-2787287577 title"
            >
              This is a long question
               
              <span
                className="jsx-2787287577"
              >
                (v
                1
                )
              </span>
            </div>
          </div>
          <div
            className="jsx-2787287577 questionSingle"
          >
            <div
              className="jsx-2787287577 type"
            >
              <span>
                SC
              </span>
            </div>
            <div
              className="jsx-2787287577 title"
            >
              This is a long question
               
              <span
                className="jsx-2787287577"
              >
                (v
                1
                )
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-1915206423 actionArea"
    >
      <a
        className="jsx-1915206423"
        href="/sessions/evaluation/4c821db7-0940-4a24-b31a-7969104bbc9f"
        target="_blank"
      >
        <button
          className="ui icon left labeled button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="external icon"
          />
          Evaluation
        </button>
      </a>
      <button
        className="ui icon primary left labeled button lastButton"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="play icon"
        />
        Start
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots sessions SessionTimeline 1`] = `
<div
  className="jsx-4107093464 sessionTimeline"
>
  <div
    className="jsx-4107093464 topRow"
  >
    <div
      className="jsx-4107093464 infos"
    >
      <div
        className="jsx-4107093464 startingTime"
      >
        <i
          aria-hidden="true"
          className="time icon"
        />
         
        00:00:00
      </div>
      <div
        className="jsx-4107093464 runningTime"
      >
        <i
          aria-hidden="true"
          className="play circle icon"
        />
         
        00:00:00
      </div>
    </div>
    <div
      className="jsx-4107093464 actions"
    >
      <div
        className="jsx-4107093464 qrTrigger"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          className="ui small icon button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="qrcode icon"
          />
        </button>
      </div>
      <a
        className="jsx-4107093464"
        href="/join/undefined"
        target="_blank"
      >
        <button
          className="ui small icon left labeled button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="external icon"
          />
          <span>
            Student View
          </span>
        </button>
      </a>
      <a
        className="jsx-4107093464"
        href="/sessions/evaluation/undefined"
        target="_blank"
      >
        <button
          className="ui small icon left labeled button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          <i
            aria-hidden="true"
            className="external icon"
          />
          <span>
            Evaluation (Results)
          </span>
        </button>
      </a>
    </div>
  </div>
  <div
    className="jsx-4107093464 blocks"
  >
    <div
      className="jsx-4107093464 blockWrap"
    >
      <div
        className="jsx-4107093464 waiting first"
      >
        <i
          aria-hidden="true"
          className="video play outline big icon"
        />
      </div>
      <div
        className="jsx-4107093464 block"
      >
        <div
          className="jsx-936553283 questionBlock"
        >
          <div
            className="jsx-936553283 index"
          >
            Block 
            1
          </div>
          <div
            className="jsx-936553283 sessionStatus"
          />
          <div
            className="jsx-936553283 questions"
          >
            <div
              className="jsx-2787287577 questionSingle"
            >
              <div
                className="jsx-2787287577 type"
              >
                <span>
                  SC
                </span>
              </div>
              <div
                className="jsx-2787287577 title"
              >
                This is a long question
                 
              </div>
            </div>
            <div
              className="jsx-2787287577 questionSingle"
            >
              <div
                className="jsx-2787287577 type"
              >
                <span>
                  SC
                </span>
              </div>
              <div
                className="jsx-2787287577 title"
              >
                This is a long question
                 
              </div>
            </div>
            <div
              className="jsx-2787287577 questionSingle"
            >
              <div
                className="jsx-2787287577 type"
              >
                <span>
                  SC
                </span>
              </div>
              <div
                className="jsx-2787287577 title"
              >
                This is a long question
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="jsx-4107093464 waiting last"
      >
        <i
          aria-hidden="true"
          className="stop circle outline big icon"
        />
      </div>
    </div>
  </div>
  <div
    className="jsx-4107093464 buttons"
  >
    <button
      className="ui blue large icon left labeled button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="right arrow icon"
      />
      Open next block
    </button>
  </div>
</div>
`;
